<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnsenanzasFragment">

    <TextView
        android:id="@+id/text_ensenanzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/Ensenanzas"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/separador"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="348dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ensenanzas"
        app:layout_constraintVertical_bias="0.276">

        <TextView
            android:id="@+id/textESO"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/ESO"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textESO1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="1º ESO"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/textESO2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="2º ESO"
            android:textColor="@android:color/holo_red_dark" />


        <TextView
            android:id="@+id/textESO3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="3º ESO"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/textESO4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:text="4º ESO"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/textBachiller"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/BACHILLER"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/texBach1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="1º Bachillerato"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/textBach2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:text="2º Bachillerato"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/textFP"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/FP"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textFPB"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginLeft="10dp"
            android:text="@string/FPBCocina" />

        <TextView
            android:id="@+id/textCFGM"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginLeft="10dp"
            android:text="@string/GMSistemas" />

        <TextView
            android:id="@+id/textDAM"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginLeft="10dp"
            android:text="@string/GSDAM" />

        <TextView
            android:id="@+id/textDAW"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginLeft="10dp"
            android:text="@string/GSDAW" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>