<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EquipoFragment">


    <TextView
        android:text="@string/Menu_equipo"
        android:id="@+id/text_equipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/separador"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="356dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416">

        <TextView
            android:id="@+id/textDirecto"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/Equipo_Director"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textdirec1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:gravity="left"
            android:text="Miguel Ángel Torio Fernández" />

        <TextView
            android:id="@+id/textJE"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/Equipo_jefe_ESO"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textJE1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:text="Carmen Nacho" />

        <TextView
            android:id="@+id/textJEFP"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/Equipo_jefe_FP"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/texttextJEFP1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:text="Manuel Noguerol" />

        <TextView
            android:id="@+id/textSec"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/Equipo_Secretario"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSec1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:text="Javier Cubero Sanjurjo" />

        <TextView
            android:id="@+id/textJEA"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/Equipo_Jefe_Adjunto"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textJEFP11"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:text="María Ángeles Diez Alonso" />

        <TextView
            android:id="@+id/textJEFP1"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/Equipo_Jefe_Adjunto"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textJEA11"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:text="Juan Bustillo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>